# carbonable-indexer-rs

./: '  .dockerignore  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.mainnet-blue.toml  fly.mainnet.toml  fly.sepolia.toml  fly.staging.toml  fly.testnet.toml  fly.toml
.github/workflows/: check.yml  test.yml
data/: client.ts  goerli.bck.data.json  goerli.data.json  mainnet.data.json  sepolia.data.json  testnet2.data.json
