[workspace]
members = [
    "packages/api",
    "packages/indexer",
    "packages/migration",
    "packages/domain"
]

[workspace.dependencies]
carbonable-domain = { path = "packages/domain"}

actix-web = { version = "4.3.1", features = ["rustls"] }
apibara-sdk = { git = "https://github.com/apibara/dna", branch = "main" }
apibara-core = { git = "https://github.com/apibara/dna", branch = "main" }
async-recursion = "1.0.4"
anyhow = "1.0.70"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "master" }
bigdecimal = "0.3.0"
crypto-bigint = { version = "0.4.9", features = ["serde", "alloc"] }
async-trait = "0.1.66"
futures = "0.3.26"
futures-util = "0.3.26"
serde = { version = "^1.0.159", features = ["alloc"]}
serde_json = { version = "1.0.94", features = ["raw_value", "alloc"]} 
thiserror = "1.0.39"
tokio = "1.26.0"
tonic = "0.8.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive", "env"] }
tracing = "0.1.37"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-hyper-rustls"] }
reqwest = "0.11.14"
serde-aux = "4.1.2"
sea-query = { version = "0.28.3", features = ["thread-safe", "backend-postgres", "derive", "attr", "with-json", "with-uuid", "with-bigdecimal", "postgres-array", "with-time"] }
time = { version = "0.3.20", features = ["serde", "formatting", "macros"] }
deadpool-postgres = "0.10.5"
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-protocol =  "0.6.5"
tokio-postgres = "0.7.7"
deadpool = "0.9.5"
sea-query-postgres = { version = "0.2.0", features = ["with-json", "with-uuid", "postgres-array", "with-bigdecimal", "with-time"] }
sea-orm-migration = { version = "0.11.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-query-binder = { version = "0.3.0", features = ["with-uuid", "with-json", "postgres-array", "with-bigdecimal", "with-time", "runtime-tokio-rustls", "sqlx-postgres"] }
sqlx = { version = "0.6.3", features = ["postgres", "macros", "uuid", "chrono", "time", "bigdecimal", "json", "runtime-tokio-rustls"]}
url = "2.3.1"
pbjson-types = "0.5.1"
